test/regress/regress-33.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
;;; ARGS: --enable-bulk-memory
(data "\d")
(;; STDERR ;;;
out/test/regress/regress-33.txt:4:8: error: bad escape "\d"
(data "\d")
       ^^
out/test/regress/regress-33.txt:4:7: error: unexpected token Invalid, expected ).
(data "\d")
      ^^^^
;;; STDERR ;;)
